feature(manage-product): build api update, softdelete, harddelete, restore, getproducts by brand category tag